Fixed divide by zero error in calc_residence_time for nonburnable fuels

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2479,7 +2479,7 @@ import pyretechnics.conversion as conv
 
 
 def calc_residence_time(sigma_prime):
-    return 384.0 / sigma_prime
+    return 384.0 / sigma_prime if (sigma_prime > 0.0) else 0.0
 
 
 def calc_flame_depth(spread_rate, residence_time):
@@ -5768,7 +5768,7 @@ def calc_phi_gradient_on_slope(phi_gradient_xy, elevation_gradient):
     """
     Return the gradient of phi projected onto the slope-tangential plane as a 3D (x,y,z) vector (in phi/m) given:
     - phi_gradient_xy    :: (dphi_dx: phi/m, dphi_dy: phi/m) 2D vector on the horizontal plane
-    - elevation_gradient :: (dz_dx: m/m, dz_dy: m/m)
+    - elevation_gradient :: (dz_dx: rise/run, dz_dy: rise/run)
     """
     (dphi_dx, dphi_dy) = phi_gradient_xy
     phi_gradient_xyz   = np.asarray((dphi_dx, dphi_dy, 0.0))
